[package]
name = "fclib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.3.27"
hyper = { version = "0.14.25", features = ["client", "http1", "http2"]}
hyperlocal = "0.8.0"
url = "1.5"
thiserror = "1.0.39"
async-trait = "0.1"
bytes = "1.4.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
