[package]
name = "fclib"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
clap = []

[dependencies]
reqwest = { version = "0.12", features = ["json"]}
displaydoc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.39"
bytes = "1.4.0"
semver = "1.0"
log = "0.4"
clap = { version = "4.3", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
